<resources>
    <string name="app_name">Burned Calories Calculator</string>
    <string name="weight_lbl">Weight:</string>
    <string name="enter_weight_et">000</string>
    <string name="miles_ran_lbl">Miles Ran:</string>
    <string name="miles_ran_tv">0mi</string>
    <string name="calories_burned_lbl">Calories Burned:</string>
    <string name="calories_burned_tv">00.0</string>
    <string name="height_lbl">Height</string>
    <string name="bmi_lbl">BMI</string>
    <string name="bmi_tv">00</string>
    <string name="name_lbl">Name</string>
    <string name="reset_button">Reset</string>

    <string-array name="heightFeet_array">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="heightInches_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>
