<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_burned_calories_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moore.burnedcaloriescalculator.BurnedCaloriesCalculatorActivity"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/AppTheme.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weightLbl"
            android:layout_alignParentTop="true"
            android:text="@string/weight_lbl" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weightET"
            android:layout_toRightOf="@id/weightLbl"
            android:layout_alignParentEnd="true"
            android:hint="@string/enter_weight_et"
            android:textAlignment="textEnd"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone">
            <requestFocus />
        </EditText>


        <TextView
            style="@style/AppTheme.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/milesRanLbl"
            android:layout_below="@id/weightLbl"
            android:text="@string/miles_ran_lbl" />

        <TextView
            style="@style/AppTheme.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/caloriesBurnedLbl"
            android:layout_below="@id/milesRanLbl"
            android:text="@string/calories_burned_lbl" />

        <TextView
            style="@style/AppTheme.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heightLbl"
            android:layout_below="@id/caloriesBurnedLbl"
            android:text="@string/height_lbl" />

        <TextView
            style="@style/AppTheme.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmiLbl"
            android:layout_below="@id/heightLbl"
            android:text="@string/bmi_lbl" />

        <TextView
            style="@style/AppTheme.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameLbl"
            android:layout_below="@id/bmiLbl"
            android:text="@string/name_lbl" />

        <Button
            style="@style/AppTheme.Button"
            android:text="@string/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resetButton"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/nameLbl"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/milesRanTV"
            android:text="@string/miles_ran_tv"
            android:layout_alignBaseline="@+id/milesRanLbl"
            android:layout_alignBottom="@+id/milesRanLbl"
            android:layout_toEndOf="@+id/milesRanLbl" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/milesRanSeekBar"
            android:progress="0"
            android:max="30"
            android:layout_alignBottom="@+id/milesRanTV"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/milesRanTV" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/caloriesBurnedTV"
            android:textAlignment="textEnd"
            android:text="@string/calories_burned_tv"
            android:layout_alignBaseline="@+id/caloriesBurnedLbl"
            android:layout_alignBottom="@+id/caloriesBurnedLbl"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/caloriesBurnedLbl" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heightFeetSpinner"
            android:textAlignment="textEnd"
            android:layout_alignTop="@+id/heightInchesSpinner"
            android:layout_toStartOf="@+id/heightInchesSpinner" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heightInchesSpinner"
            android:textAlignment="textEnd"
            android:layout_above="@+id/bmiTV"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmiTV"
            android:text="@string/bmi_tv"
            android:textAlignment="textEnd"
            android:layout_alignBaseline="@+id/bmiLbl"
            android:layout_alignBottom="@+id/bmiLbl"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/bmiLbl" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameET"
            android:inputType="text"
            android:textAlignment="textEnd"
            android:imeOptions="actionDone"
            android:layout_alignBaseline="@+id/nameLbl"
            android:layout_alignBottom="@+id/nameLbl"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/nameLbl" />

    </RelativeLayout>

</ScrollView>
